--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,9 @@ packages = [{include = "it_department"}]
 python = "^3.10"
 django = "^4.2.2"
 djangorestframework = "^3.14.0"
+pillow = "^9.5.0"
+drf-spectacular = "^0.26.2"
+drf-spectacular-sidecar = "^2023.6.1"
 
 
 [build-system]
